# bookarr

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  PRIVACY.md  README.md  TERMS.md  bookarr.py  docker-compose.yml  install.bat  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/: README.md  api.md  architecture.md  building.md  configuration.md  database.md  folder-structure.md  installation.md  library.md  notifications.md  quickstart.md  scoring.md  search.md  seed-categories.md  service.md  settings.md
service/: bookarr.service  com.bookarr.plist
templates/: index.html
